# jelly_blend

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/addon/: __init__.py  helper.py  operator.py  panel.py  property.py  shapekey_helper.py  simulation_state.py
src/engine/: api.cpp  body.h  collision.cpp  collision.h  collision_constrain.cpp  collision_constrain.h  eigen_alias.h  eigen_serialization.h  fixedbody.cpp  fixedbody.h  geometry.h  jb_exception.h  mesh_utils.cpp  mesh_utils.h  physics_world.cpp  physics_world.h  python_helper.cpp  python_helper.h  segment.h  serialization.h  softbody.cpp  softbody.h  softbody_constrain.cpp  softbody_constrain.h  test.cpp  utils.h
test_file/: ui_test.blend
user_manual/: get_started.md  play_with_the_demo.md
